# example-rocq-blueprint-project

./: .gitignore  .gitmodules  Makefile  README.md  _CoqProject  rocq-example-rocq-blueprint-project.opam
.github/workflows/: blueprint.yml
blueprint/src/: content.tex  plastex.cfg  print.tex  web.tex
blueprint/src/macros/: common.tex  print.tex
home_page/: _config.yml  index.md
home_page/_layouts/: default.html
src/: functions.v  naturals.v  primes.v
theories/: even.v
theories/util/: induction.v
